# WASMine

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile  README.md  gitlab-ci.yml  interpreter_todos.txt  milestones.md  test.wasm  test.wat  todo.md
benchmarks/: Cargo.toml
benchmarks/benches/: parser_bench.rs  wasmedge_bench.rs  wasmine_interp_bench.rs  wasmine_llvm_bench.rs  wasmine_llvm_bench_criterion.rs  wasmine_llvm_bench_iai.rs  wasmtime_bench.rs
benchmarks/benches/speccpu/: util.rs  wasmine_llvm_bench_criterion_508.rs  wasmine_llvm_bench_criterion_519.rs  wasmine_llvm_bench_criterion_557.rs  wasmine_llvm_bench_iai_505.rs  wasmine_llvm_bench_iai_519.rs  wasmtime_criterion_505.rs  wasmtime_criterion_519.rs  wasmtime_criterion_557.rs
benchmarks/fixtures/: LICENSE.txt  README.md  fibonacci.wasm
benchmarks/polybench/: Cargo.toml  build.rs
benchmarks/polybench/benches/: utils.rs  wasmedge_aot_criterion.rs  wasmedge_jit_criterion.rs  wasmine_interpreter_criterion.rs  wasmine_llvm_aot_criterion.rs  wasmine_llvm_aot_iai.rs  wasmine_llvm_jit_criterion.rs  wasmtime_aot_criterion.rs  wasmtime_jit_criterion.rs
benchmarks/sightglass-connector/: Cargo.toml
benchmarks/sightglass-connector/src/: lib.rs
benchmarks/speccpu/: Cargo.toml  speccpu.env.example
benchmarks/speccpu/benches/: wasmedge_bench.rs
benchmarks/speccpu/benches/speccpu/: util.rs  wasmedge_aot_criterion.rs  wasmedge_jit_criterion.rs  wasmine_llvm_aot_criterion.rs  wasmine_llvm_bench_criterion_505.rs  wasmine_llvm_bench_iai_505.rs  wasmine_llvm_bench_iai_508.rs  wasmine_llvm_bench_iai_519.rs  wasmine_llvm_bench_iai_557.rs  wasmine_llvm_jit_criterion.rs  wasmine_parser_bench_criterion_505.rs  wasmine_parser_bench_criterion_508.rs  wasmine_parser_bench_criterion_519.rs  wasmine_parser_bench_criterion_557.rs  wasmine_parser_bench_iai_505.rs  wasmine_parser_bench_iai_508.rs  wasmine_parser_bench_iai_519.rs  wasmine_parser_bench_iai_557.rs  wasmine_parser_criterion.rs  wasmine_parser_iai.rs  wasmtime_aot_criterion.rs  wasmtime_criterion.rs  wasmtime_criterion_508.rs  wasmtime_parser_criterion.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  util.rs
crates/interpreter/src/control_flow/: call.rs  call_indirect.rs  jmp.rs  jmp_cond.rs  jmp_table.rs  mod.rs  return.rs  util.rs
crates/interpreter/src/memory/: copy.rs  drop.rs  fill.rs  grow.rs  init.rs  load.rs  mod.rs  size.rs  store.rs
crates/interpreter/src/numeric/: constant.rs  convert.rs  demote.rs  extendbits.rs  extendtype.rs  fbinary.rs  frelational.rs  funary.rs  ibinary.rs  irelational.rs  itest.rs  iunary.rs  mod.rs  promote.rs  reinterpret.rs  trunc.rs  truncsat.rs  wrap.rs
crates/interpreter/src/parametric/: drop.rs  mod.rs  select.rs
crates/interpreter/src/reference/: mod.rs  ref_func.rs  ref_is_null.rs  ref_null.rs
crates/interpreter/src/table/: copy.rs  elem_drop.rs  fill.rs  get.rs  grow.rs  init.rs  mod.rs  set.rs  size.rs
crates/interpreter/src/variable/: globalget.rs  globalset.rs  localget.rs  localset.rs  localtee.rs  mod.rs
crates/ir/: Cargo.toml
crates/ir/src/: decoder.rs  encoder.rs  fmt.rs  function.rs
crates/ir/src/instructions/: mod.rs  parametric.rs
crates/ir/src/structs/: export.rs  expression.rs  import.rs  memory.rs  module.rs  store.rs  table.rs
crates/ir/src/utils/: mod.rs  numeric_transmutes.rs
crates/llvm-gen/: Cargo.toml
crates/llvm-gen/src/: aot.rs  error.rs  function_builder.rs  jit_executor.rs  lib.rs  parser.rs  runtime_adapter.rs  translator.rs  util.rs
crates/llvm-gen/src/abstraction/: builder.rs  context.rs  function.rs  lljit.rs  mod.rs  module.rs  target_machine.rs
crates/llvm-gen/src/instructions/: instruction_consumer.rs  memory.rs  mod.rs  numeric.rs  parametric.rs  reference.rs  table.rs  terminators.rs  variable.rs
crates/module/: Cargo.toml
crates/module/src/: error.rs  fmt.rs  lib.rs
crates/module/src/instructions/: basic_block.rs  decoder.rs  encoder.rs  instruction_consumer.rs  mod.rs  parametric.rs  reference.rs  table.rs  variable.rs
crates/module/src/objects/: data.rs  element.rs  export.rs  expression.rs  function.rs  global.rs  import.rs  instruction.rs  memory.rs  mod.rs  module.rs  table.rs
crates/module/src/utils/: numeric_transmutes.rs  runtime_lib_adapter.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  function_builder.rs  lib.rs  module_parser.rs  parsable.rs  parse_basic_blocks.rs  parser.rs  stack.rs  wasm_stream_reader.rs
crates/parser/src/instructions/: mod.rs  parametric.rs  reference.rs  table.rs  variable.rs
crates/parser/src/ir/: context.rs  function_builder.rs  mod.rs  opcode_tbl.rs  parse_basic_blocks.rs  stack.rs
crates/runtime-lib/: Cargo.toml
crates/runtime-lib/src/: cluster.rs  config.rs  error.rs  lib.rs  linker.rs  sugar.rs
crates/runtime-lib/src/helper/: mod.rs  signals.rs  types.rs
crates/runtime-lib/src/objects/: engine.rs  functions.rs  (+7 more)
crates/wasi/: Cargo.toml
crates/wasi/src/: context.rs  functions.rs  lib.rs  types.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser_fuzzing.rs
llvm-gen/: Cargo.toml
llvm-gen/src/: error.rs  executor.rs  jit_executor.rs  lib.rs  runtime_adapter.rs  translator.rs  util.rs
llvm-gen/src/abstraction/: builder.rs  context.rs  execution_engine.rs  function.rs  lljit.rs  mod.rs  module.rs  pass_manager.rs
llvm-gen/src/instructions/: memory.rs  numeric.rs  parametric.rs  reference.rs  table.rs  terminators.rs  variable.rs
runtime-lib/: Cargo.toml
runtime-lib/src/: cluster.rs  config.rs  context.rs  engine.rs  error.rs  execution_context.rs  func.rs  globals.rs  instance_handle.rs  lib.rs  linker.rs  memory.rs  module_instance.rs  runtime.rs  segmented_list.rs  signals.rs  tables.rs  types.rs  utils.rs
runtime-lib/src/cli/: mod.rs
runtime-lib/src/helper/: signals.rs  types.rs  utils.rs
runtime-lib/src/helpers/: mod.rs  sync.rs
runtime-lib/src/objects/: engine.rs  execution_context.rs  functions.rs  globals.rs  instance_handle.rs  memory.rs  tables.rs
runtime-lib/src/wasi/: context.rs  functions.rs  mod.rs  types.rs  utils.rs
(+326 files in other folders)
