workspace = { members = [ "fuzz", "runtime-lib", "interpreter", "ir", "parser", "tests/gen_util", "wasm-types", "loader", "runtime-interface", "llvm-gen", "sightglass-connector", "benchmarks", "utils/max-func-type"] }

[package]
name = "wasm_rt"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime-lib = { path = "runtime-lib" }
wasm-types = { path = "./wasm-types" }
parser = { path = "./parser" }
loader = { path = "./loader" }
interpreter = { path = "./interpreter" }
llvm-gen = { path = "./llvm-gen" }
ir = { path = "./ir" }
runtime-interface = { version = "0.1.0", path = "runtime-interface" }
log = "0.4.22"

[dev-dependencies]
wast = "206.0.0"
gen_util = { path = "./tests/gen_util" }
criterion = "0.3"
wasmparser = "0.207.0"
test-log = "0.2.16"
wasmtime = "22.0.0"
wasmedge-sdk = { version = "0.13.0", default-features = false, features = ["standalone"] }

[[bin]]
name = "wasm_rt"
path = "./bin/main.rs"

[profile.release]
debug = true
lto = "fat"
strip = false

[profile.bench]
debug = true
strip = false
