workspace = { members = [ "fuzz", "runtime-lib", "interpreter", "ir", "parser", "tests/gen_util", "wasm-types", "loader", "runtime-interface", "llvm-gen", "sightglass-connector", "benchmarks", "utils/max-func-type"] }

[package]
name = "wasm_rt"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime-lib = { path = "runtime-lib" }
wasm-types = { path = "./wasm-types" }
parser = { path = "./parser" }
loader = { path = "./loader" }
interpreter = { path = "./interpreter" }
llvm-gen = { path = "./llvm-gen" }
ir = { path = "./ir" }
runtime-interface = { version = "0.1.0", path = "runtime-interface" }
log = "0.4.22"

[dev-dependencies]
wast = "206.0.0"
gen_util = { path = "./tests/gen_util" }
test-log = "0.2.16"

[[bin]]
name = "wasm_rt"
path = "./bin/main.rs"

[profile.release]
debug = true

[profile.bench]
debug = true
