[package]
name = "wasm_rt"
authors = ["Lukas Döllerer <lukas.doellerer@tum.de>", "Enrico Fazzi <enrico.fazzi@tum.de>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "A high-performance standalone WebAssembly runtime"
readme = "README.md"
homepage = "https://gitlab.db.in.tum.de/epd24s/wasm-rt"
repository = "https://gitlab.db.in.tum.de/epd24s/wasm-rt"

[dependencies]
runtime-lib = { workspace = true }
wasm-types = { workspace = true }
parser = { workspace = true }
resource-buffer = { workspace = true }
interpreter = { workspace = true }
llvm-gen = { workspace = true }
module = { workspace = true }
runtime-interface = { workspace = true }
simplelog = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
wasi = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
gen_util = { workspace = true }
wast = "216.0.0"
test-log = "0.2.16"

[lints]
workspace = true

[[bin]]
name = "wasm_rt"
path = "./src/bin/main.rs"

[lib]
name = "wasm_rt_lib"

[profile.release]
strip = true

[profile.bench]
debug = true
strip = false

[workspace]
resolver = "2"

members = [
    "benchmarks/sightglass-connector",
    "benchmarks/speccpu",
    "benchmarks/polybench",

    "fuzz",

    "crates/runtime-lib",
    "crates/module",
    "crates/parser",
    "crates/wasm-types",
    "crates/resource-buffer",
    "crates/runtime-interface",
    "crates/llvm-gen",
    "crates/wasi",

    "crates/gen_util",
    "utils/max-func-type",
]

[workspace.package]
version = "0.1.0"
authors = ["Lukas Doellerer", "Enrico Fazzi" ]
edition = "2021"
rust-version = "1.78.0"

[workspace.lints.rust]
trivial_numeric_casts = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unstable_features = 'warn'
unused_extern_crates = 'warn'

[workspace.lints.clippy]
unnecessary_to_owned = 'warn'
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
manual_strip = 'warn'

[workspace.dependencies]
runtime-lib = { path = "crates/runtime-lib", version = "0.1.0" }
interpreter = { path = "crates/interpreter" }
module = { path = "crates/module", version = "0.1.0" }
parser = { path = "crates/parser", version = "0.1.0" }
wasm-types = { path = "crates/wasm-types", version = "0.1.0" }
resource-buffer = { path = "crates/resource-buffer", version = "0.1.0" }
runtime-interface = { path = "crates/runtime-interface", version = "0.1.0" }
llvm-gen = { path = "crates/llvm-gen", version = "0.1.0" }
wasi = { path = "crates/wasi", version = "0.1.0" }
gen_util = { path = "crates/gen_util", version = "0.1.0" }

libc = "0.2.159"
log = "0.4.22"
thiserror = "1.0.64"
once_cell = "1.19.0"
cee-scape = "0.2.0"
simplelog = "0.12.2"
bitflags = "2.6.0"
uuid = { version = "1.10.0", features = ["v4"] }
clap = { version = "4.5.18", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal"] }
rand = "0.8.5"
itertools = "0.13.0"
rkyv = { version = "0.7.45", features = ["smallvec"] }
memmap2 = "0.9.5"
tempfile = "3.12.0"
smallvec = "1.13.2"


[features]
default = ["llvm", "interp", "lazy-tables"]
llvm = ["runtime-lib/llvm"]
interp = ["runtime-lib/interp"]
asm = []

# debug features
lazy-tables = ["runtime-lib/lazy-tables", "llvm-gen/lazy-tables"]
