[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

[dependencies]
libfuzzer-sys = "0.4.7"
wasm-smith = "0.217.0"
runtime-lib = { workspace = true }

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parser_fuzzing"
path = "fuzz_targets/parser_fuzzing.rs"
test = false
doc = false
bench = false
