[package]
name = "llvm-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
ir = { version = "0.1.0", path = "../ir" }
thiserror = "1.0.63"
wasm-types = { version = "0.1.0", path = "../wasm-types" }
llvm-sys = { package = "llvm-sys", version = "181.1.1", features = ["prefer-dynamic"] }
log = "0.4.22"
libc = "0.2.158"
once_cell = "1.19.0"
runtime-interface = { path = "../runtime-interface" }
tempfile = "3.12.0"
