[package]
name = "runtime-lib"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
nix = "0.28.0"
thiserror = "1.0.61"
wasm-types = { path = "../wasm-types" }
ir = { path = "../ir" }
parser = { path = "../parser" }
loader = { path = "../loader" }
interpreter = { path = "../interpreter", optional=true }
libc = "0.2.155"
log = "0.4.21"
llvm-gen = { path = "../llvm-gen", optional=true }
runtime-interface = { path = "../runtime-interface" }

[features]
default = ["interp"]
llvm = ["dep:llvm-gen"]
interp = ["dep:interpreter"]
asm = []
