[package]
name = "speccpu"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime-lib = { workspace = true }
wasi = { workspace = true }
criterion = "0.5"
wasmparser = "0.216.0"
wasmtime = "24.0.0"
wasmedge-sdk = { version = "0.14.0", default-features = false, features = ["standalone"] }
iai-callgrind = "0.13.2"
gag = "1.0.0"
wasmtime-wasi = "24.0.0"
once_cell = "1.19.0"

[[bench]]
name = "wasmine_llvm_jit_criterion"
path = "benches/speccpu/wasmine_llvm_jit_criterion.rs"
harness = false

[[bench]]
name = "wasmine_parser_criterion"
path = "benches/speccpu/wasmine_parser_criterion.rs"
harness = false

[[bench]]
name = "wasmtime_parser_criterion"
path = "benches/speccpu/wasmtime_parser_criterion.rs"
harness = false

[[bench]]
name = "wasmtime_criterion"
path = "benches/speccpu/wasmtime_criterion.rs"
harness = false

[[bench]]
name = "wasmine_parser_iai"
path = "benches/speccpu/wasmine_parser_iai.rs"
harness = false
