[package]
name = "ir"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
wasm-types = { workspace = true }
once_cell = { workspace = true }
bitcode = { workspace = true }
