[package]
name = "llvm-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ir = { workspace = true }
thiserror = { workspace = true }
wasm-types = { workspace = true }
llvm-sys = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
runtime-interface = { workspace = true }
tempfile = { workspace = true }
