[package]
name = "llvm-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
llvm-sys = { package = "llvm-sys", version = "181.1.1", features = ["prefer-dynamic"] }
module = { workspace = true }
thiserror = { workspace = true }
wasm-types = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
runtime-interface = { workspace = true }
tempfile = { workspace = true }
parser = { workspace = true }
smallvec = { workspace = true }
resource-buffer = { workspace = true }
rkyv = { workspace = true }
