[package]
name = "parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
log ={  workspace = true }
thiserror = { workspace = true }
wasm-types = { workspace = true }
ir = { workspace = true }
loader = { workspace = true }
itertools = { workspace = true }
